--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-query": "^3.39.3",
     "starknet": "^4.22.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1"
