add mdx packages

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.5",
     "@starknet-react/core": "^0.17.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
@@ -19,11 +22,14 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "get-starknet": "^2.1.0",
+    "gray-matter": "^4.0.3",
     "next": "13.4.4",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "remark-frontmatter": "^4.0.1",
     "starknet": "^4.22.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
