--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bn.js": "^5.2.1",
+    "chart.js": "^4.3.0",
     "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
@@ -28,6 +29,7 @@
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "starknet": "^4.22.0",
