--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.4.3",
     "get-starknet": "^2.1.0",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "next": "13.4.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.23",
@@ -35,6 +36,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.1"
+    "@types/bn.js": "^5.1.1",
+    "@types/lodash": "^4.14.195"
   }
 }
