--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
     "@types/bn.js": "^5.1.1",
     "@types/lodash": "^4.14.195"
   }
