--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "get-starknet": "^2.1.0",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "next": "13.4.4",
+    "next": "13.4.7",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -38,6 +38,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.38.1",
     "@types/bn.js": "^5.1.1",
     "@types/lodash": "^4.14.195"
   }
